2007-03-13  Dan Williams  <dcbw@redhat.com>

	Patch from Tambet Ingo <tambet@ximian.com>

	* src/nm-ap-security-leap.c
		- (nm_ap_security_leap_class_init): override default get_authentication_required
		- (real_get_authentication_required): LEAP requires authentication

2007-03-07  Vladimer Sichinava  <vsichi@gnome.org>

        * configure.in: Added 'ka' to ALL_LINGUAS.

2007-03-06  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* configure.in: Added 'gl' to ALL_LINGUAS.

2007-02-23  Dan Williams  <dcbw@redhat.com>

	Patch from Volker Braun <volker.braun@physik.hu-berlin.de>

	* NetworkManager.pc.in
		- Add 'libnm-util' to Requires

2007-02-23  Dan Williams  <dcbw@redhat.com>

	Patch from Andy Whitcroft <apw@shadowen.org> (Gnome.org #410426)

	* src/NetworkManagerAP.c
		- (add_capabilities_from_cipher): fix addition of WEP capabilities by
			OR-ing rather than AND-ing

2007-02-23  Dan Williams  <dcbw@redhat.com>

	Patch from Loic Minier <lool+gnome@via.ecp.fr> (Gnome.org #411155)

	* configure.in
		- Fix up AC_SUBST clutter
		- Get GObject library link flags

	* gnome/libnm_glib/Makefile.am
		- Link with GObject link flags

2007-02-12  Dan Williams  <dcbw@redhat.com>

	Patch from Helmut Schaa <hschaa@suse.de>

	* vpn-daemons/pptp/configure.in
	  vpn-daemons/pptp/Makefile.am
	  vpn-daemons/openvpn/configure.in
	  vpn-daemons/openvpn/Makefile.am
	  vpn-daemons/vpnc/configure.in
	  vpn-daemons/vpnc/Makefile.am
		- Add --without-gnome switch which disables building gnome bits

2007-02-12  Dan Williams  <dcbw@redhat.com>

	Better handle ipw cards and their drivers which issue quickly successive
	scan result notifications due to background scanning.  Batch up scan result
	requests as a result of a notification.  (already done in trunk, but
	differently)

	* src/nm-device-802-11-wireless.c
		- (wireless_event_helper): don't blindly request scan results; do
			nothing if there's already a scan result request in-progress.  If